# clink

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
apps/: llm_config.py
apps/bot/agents/: base.py
apps/bot/agents/classification/: agent.py  models.py  signatures.py
apps/bot/agents/response/: agent.py  models.py  signatures.py  tools.py
apps/bot/plugins/: mention.py
apps/bot/services/research/: brave.py  jina.py  models.py  service.py  status_reporter.py
apps/bot/utils/: conversation_timeline.py  messages.py  stop_detection.py
apps/shared/: config.py  database.py  httpx_client.py
apps/web/api/: app.py
apps/web/models/: memory.py
apps/web/services/channel/: channel_monitor_state.py  channel_state_manager.py
apps/web/services/watcher/: channel_watcher_state.py
