[project]
name = "clink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.2.1",
    "fastapi>=0.136.3",
    "hikari>=2.1.1",
    "hikari-lightbulb<3.0.0",
    "httpx>=0.28.1",
    "hypercorn>=0.18.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.106.0",
    "sqlalchemy>=2.0.50",
]
